# J-PET-scintillators

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  model.cpp  model.h  prepare.sh  sim.sh  simulation-0.cpp  simulation-1.cpp  simulation-3a.cpp  simulation-3b.cpp  simulation-3c.cpp  simulation-3d.cpp  simulation-additional.cpp  simulation-example.cpp  simulation-kowalski.cpp  simulation-matrix.cpp  simulation-orderstatistics.cpp
